# scholar-rag-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DAILY_IMPROVEMENTS.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SAFETY.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: CONFIGURATION.md  DEMO.md  EXAMPLES.md  PERFORMANCE.md  PULL_SHARK_LOG.md  TROUBLESHOOTING.md
docs/adr/: ADR-002-HTTP-client.md  ADR-034-async-task-queue.md  ADR-074-HTTP-client.md  ADR-075-async-task-queue.md
docs/guides/: ADS_SOURCE_GUIDE.md  BIORXIV_SOURCE_GUIDE.md  CORE_SOURCE_GUIDE.md  DATACITE_SOURCE_GUIDE.md  FIGSHARE_SOURCE_GUIDE.md  OPENCITATIONS_SOURCE_GUIDE.md  ORCID_SOURCE_GUIDE.md  OSF_SOURCE_GUIDE.md
docs/releases/: v0.3.14.md  v0.4.8.md  v0.7.1.md
migrations/: README.md
scripts/: __init__.py  benchmark.py  create_demo_gif.py  demo_local.py  evaluate_retrieval.py  health_check.py  ingest_papers.py  reset_dev_db.sh
src/: config.py
src/agent/: __init__.py  executor.py  models.py  observer.py  planner.py  runner.py  safety.py  state_machine.py
src/api/: dependencies.py  main.py  schemas.py
src/ingestion/: __init__.py  ads.py  arxiv.py  biorxiv.py  chunking.py  core.py  crossref.py  datacite.py  dblp.py  doaj.py  europepmc.py  figshare.py  hal.py  openaire.py  openalex.py  opencitations.py  orcid.py  osf.py  pdf.py  pipeline.py  pubmed.py  semantic_scholar.py  zenodo.py
tests/: __init__.py  test_agent_runner.py  test_api.py  test_citations.py  test_connectors.py  test_decision_engine.py  test_dependencies.py  test_event_log.py  test_graph_multihop.py  test_ingestion.py  test_llm_router.py  test_mmr.py  test_packaging.py  test_rate_limit.py  test_retrieval.py  test_safety_limits.py  test_state_machine.py
(+26 files in other folders)
