[project]
name = "scholar-rag-agent"
version = "0.1.0"
description = "Production-grade Agentic RAG for scientific literature with multi-hop reasoning and multi-LLM routing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Scholar RAG Agent Contributors" }]
keywords = ["agentic-rag", "graphrag", "scientific-ai", "llm-agents", "retrieval-augmented-generation"]
dependencies = [
  "defusedxml>=0.7.1",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pypdf>=4.2.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
all = ["spacy>=3.7.0", "sentence-transformers>=3.0.0"]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "pillow>=10.3.0",
]

[project.scripts]
scholar-rag-api = "api.main:main"
scholar-rag-ingest = "scripts.ingest_papers:main"
scholar-rag-eval = "scripts.evaluate_retrieval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/agent",
  "src/api",
  "src/ingestion",
  "src/llm",
  "src/retrieval",
  "src/storage",
  "scripts",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "ASYNC", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"scripts/*.py" = ["S603", "S607"]
"src/storage/graph_store.py" = ["S608"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = []
exclude = ["tests"]
